# syn-back-api

./: Dockerfile  config.nims  syn_text_api.nimble
core/: .gitignore  Cargo.toml  README.md  input.html  test.html
core/scripts/: format.bash
core/src/: api.rs  borrow.rs  config.rs  error.rs  grammar.rs  infl.rs  log.rs  main.rs  persistence.rs  redis.rs  request.rs  scrappers.rs  task.rs  texts.rs  utils.rs
core/src/api/: lexicon.rs  verse.rs
core/src/api/lexicon/: lexicon_controller.rs  lexicon_model.rs  lexicon_repo.rs  lexicon_service.rs
core/src/api/verse/: verse_controller.rs  verse_model.rs  verse_repo.rs  verse_service.rs
core/src/infl/: noun.rs  verb.rs
core/src/public/: redoc.html
core/src/scrappers/: abarim.rs  katabiblon.rs  wiki.rs
core/src/scrappers/abarim/: declension.rs  parser.rs
core/src/scrappers/katabiblon/: details.rs  inflections.rs  noun.rs  page.rs  parser.rs
core/src/scrappers/wiki/: adjective.rs  adverb.rs  article.rs  conjunction.rs  definition.rs  details.rs  errors.rs  noun.rs  numeral.rs  page.rs  parser.rs  participle.rs  particle.rs  preposition.rs  pronoun.rs  quantifier.rs  table.rs  verb.rs
core/src/utils/: extract.rs  extractors.rs  scrapper.rs  str.rs
core/src/utils/extract/: path_object_id.rs
core/src/utils/extractors/: query_nested.rs
core/src/utils/scrapper/: filter_by_tag.rs  select.rs
core/src/utils/str/: camel_case.rs  capitalize.rs  closest.rs  decode_html.rs  remove_diacritics.rs  skip_last.rs  snake_case.rs
lib/: Cargo.toml
lib/src/: lib.rs
scripts/: api:dev.bash  format.bash
src/: config.nim  http.nim  main.nim
src/exporters/: abarim.nim
src/persistence/: verse.nim
src/utils/: seq.nim
