[package]
name = "syn_text_api_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = "0.11.18"
tl = "0.7.7"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
lib = { path = "../lib" }
html-escape = "0.2.13"
serde = "1.0.164"
mongodb = "2.5.0"
futures = "0.3.28"
once_cell = "1.18.0"
async-trait = "0.1.68"
nameof = "1.2.2"
dotenv = "0.15.0"
strum = { version = "0.24", features = ["derive", "strum_macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-web = "4.3.1"
tracing-actix-web = "0.7.5"
