[package]
name = "syn_text_api_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", features = ["std", "backtrace"] }
reqwest = "0.11.18"
tl = "0.7.7"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
lib = { path = "../lib" }
html-escape = "0.2.13"
serde = "1.0.164"
mongodb = { version = "2.8.1" }
futures = "0.3.28"
once_cell = "1.18.0"
async-trait = "0.1.68"
nameof = "1.2.2"
dotenv = "0.15.0"
strum = { version = "0.24", features = ["derive", "strum_macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-web = "4.3.1"
tracing-actix-web = "0.7.5"
actix-files = "0.6.2"
actix-cors = "0.6.4"
url = "2.4.0"
serde_with = "3.6.1"
serde_qs = "0.12.0"
thiserror = "1.0.57"
regex = "1.10.3"
scraper = "0.19.0"
serde_json = "1.0.114"
async-recursion = "1.0.5"
strsim = "0.11.0"
ego-tree = "0.6.2"
cliclack = "0.1.13"
redis = { version = "0.25.3", features = ["tokio-comp"] }
